Merge branch 'develop' of git@ssh.dev.azure.com:v3/it4all/develop/platform into develop