@@ -1,5 +1,6 @@
 package org.smartbit4all.bff.api.org;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import org.smartbit4all.api.userselector.bean.UserEditingModel;
@@ -17,7 +18,7 @@ public interface UserEditorPageApi extends PageApi<UserEditingModel> {
   public static final String USER_LIST_PAGE = "USER_LIST_PAGE";
 
   List<UiAction> USER_ACTIONS =
-      List.of(new UiAction().code(SAVE_USER).submit(true), new UiAction().code(CANCEL_USER_EDIT));
+      Arrays.asList(new UiAction().code(SAVE_USER).submit(true), new UiAction().code(CANCEL_USER_EDIT));
 
   @ActionHandler(SAVE_USER)
   void saveUser(UUID viewUuid, UiActionRequest request);
