@@ -1,5 +1,6 @@
 package org.smartbit4all.bff.api.org;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import org.smartbit4all.api.grid.bean.GridPage;
@@ -14,7 +15,7 @@ import org.smartbit4all.api.view.bean.View;
 public interface UserListPageApi extends PageApi<Object> {
 
   public static final List<String> orderedColumns =
-      List.of(User.NAME, User.USERNAME, User.EMAIL);
+      Arrays.asList(User.NAME, User.USERNAME, User.EMAIL);
 
   public static final String USER_GRID = "USER_GRID";
 
@@ -27,10 +28,10 @@ public interface UserListPageApi extends PageApi<Object> {
   public static final String USER_EDITOR_DIALOG = "ADD_USER_DIALOG";
 
 
-  List<UiAction> GRID_ACTIONS = List.of(
+  List<UiAction> GRID_ACTIONS = Arrays.asList(
       new UiAction().code(OPEN_USER_EDITOR));
 
-  List<UiAction> USER_ADMIN_ACTIONS = List.of(
+  List<UiAction> USER_ADMIN_ACTIONS = Arrays.asList(
       new UiAction().code(OPEN_USER_EDITOR_DIALOG));
 
   Object createPageModel(View view);
